fixed text truncation in projects

--- a/styles.css
+++ b/styles.css
@@ -97,9 +97,8 @@ h2, h3 {
 .description {
 	display: block;
 	overflow: hidden;
-	height: 200px;
+	height: 230px;
 	padding-left: 30px;
-
 }
 
 .readmore {
@@ -113,22 +112,4 @@ h2, h3 {
 	transform: scale(1.25);
 	cursor: pointer;
 	text-decoration: underline;
-}
-
-input[type=text], textarea {
-	width: 97%;
-	padding: 1%;
-	background-color: rgb(153, 153, 153);
-	border: none;
-	font-family: Lucida Sans Unicode;
-	color: white;
-}
-
-input[type=submit] {
-	border: none;
-	font-family: Lucida Sans Unicode;
-}
-
-input[type=submit]:hover {
-	background-color: rgb(0, 204, 0);
 }
